--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-helmet-async": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.14"
   },
